<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".Register">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="394dp"
        android:layout_height="40dp"
        android:layout_marginTop="96dp"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textColor="@color/mainText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHealthcard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/healthcard"
        android:textColor="#000000"
        android:textColorHighlight="@color/mainText"
        app:layout_constraintEnd_toStartOf="@+id/regHealthcardNo"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/regHealthcardNo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_1234567890"
        android:inputType="number"
        android:textColor="@color/textAlt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <TextView
        android:id="@+id/txtFName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:text="@string/first_name"
        android:textColor="#000000"
        android:textColorHighlight="@color/mainText"
        app:layout_constraintEnd_toStartOf="@+id/regFName"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtHealthcard"
        app:layout_constraintTop_toBottomOf="@+id/regHealthcardNo" />

    <EditText
        android:id="@+id/regFName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/john"
        android:inputType="textPersonName"
        android:textColor="@color/textAlt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/regHealthcardNo"
        app:layout_constraintTop_toBottomOf="@+id/regHealthcardNo" />

    <TextView
        android:id="@+id/txtLName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/last_name"
        android:textColor="#000000"
        android:textColorHighlight="@color/mainText"
        app:layout_constraintEnd_toStartOf="@+id/regLName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtFName"
        app:layout_constraintTop_toTopOf="@+id/regLName" />

    <EditText
        android:id="@+id/regLName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/smith"
        android:inputType="textPersonName"
        android:textColor="@color/textAlt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/regFName"
        app:layout_constraintTop_toBottomOf="@+id/regFName" />

    <TextView
        android:id="@+id/txtSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/sex"
        android:textColor="#000000"
        android:textColorHighlight="@color/mainText"
        app:layout_constraintEnd_toStartOf="@+id/regSex"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtLName"
        app:layout_constraintTop_toBottomOf="@+id/regLName" />

    <EditText
        android:id="@+id/regSex"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/exSex"
        android:inputType="textPersonName"
        android:textColor="@color/textAlt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/regLName"
        app:layout_constraintTop_toBottomOf="@+id/regLName" />

    <EditText
        android:id="@+id/regPhoneNo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/exPhone"
        android:inputType="phone"
        android:textColor="@color/textAlt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/regSex"
        app:layout_constraintTop_toBottomOf="@+id/regSex" />

    <TextView
        android:id="@+id/txtDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/date_of_birth"
        android:textColor="#000000"
        android:textColorHighlight="@color/mainText"
        app:layout_constraintEnd_toStartOf="@+id/regDOB"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPhoneNo" />

    <EditText
        android:id="@+id/regDOB"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/exDate"
        android:inputType="date"
        android:textColor="@color/textAlt"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/regPhoneNo"
        app:layout_constraintTop_toBottomOf="@+id/regPhoneNo" />

    <TextView
        android:id="@+id/logEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:text="@string/email"
        android:textColor="#000000"
        android:textColorHighlight="@color/mainText"
        app:layout_constraintEnd_toStartOf="@+id/regEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtDOB"
        app:layout_constraintTop_toTopOf="@+id/regEmail" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/john_smith12_gmail_com"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/regDOB"
        app:layout_constraintTop_toBottomOf="@+id/regDOB" />

    <TextView
        android:id="@+id/txtPswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textColorHighlight="@color/mainText"
        app:layout_constraintEnd_toStartOf="@+id/regPswd"
        app:layout_constraintStart_toStartOf="@+id/logEmail"
        app:layout_constraintTop_toTopOf="@+id/regPswd" />

    <EditText
        android:id="@+id/regPswd"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="Must be at least 6 characters"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/regEmail"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        android:textColor="@color/textAlt" />

    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textColorHighlight="@color/mainText"
        app:layout_constraintEnd_toStartOf="@+id/regPhoneNo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtSex"
        app:layout_constraintTop_toBottomOf="@+id/regSex" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/colorButton"
        android:text="@string/register"
        android:textColorHighlight="@color/mainText"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPswd" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_registered_login_here"
        android:textColor="@color/mainText"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>