...
                android:layout_marginTop="100dp"
                android:text="@string/what_would_you_like_to_book"
                android:textColor="@color/mainText"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/rdBook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_appointment"
                android:textColor="@color/textAlt"
                android:textSize="18sp" />

...
                android:text="@string/test_for_covid_19"
                android:textColor="@color/textAlt"
                android:textSize="18sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnDate"
            android:layout_width="112dp"
            android:layout_height="42dp"
            android:layout_marginTop="120dp"
            android:background="@color/colorButton"
            android:text="@string/select_a_date"
            android:textColor="@color/mainText"
...
